--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "axios": "^0.19.0",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {},
